--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "common"]
 	path = common
-	url = yearup-github:yearup-discord-bot/common.git
+	url = https://github.com/yearup-discord-bot/common.git
